# ida9rewriter

./: README.md  pyproject.toml  requirements.txt  setup.py
ida9rewriter/: __main__.py  cli.py
ida9rewriter/codemods/: replace_complex.py  replace_simple.py
