[tool.poetry]
name = "ida9rewriter"
version = "0.2.0"
description = ""
authors = ["random <54098069+rand-tech@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
ida9rewriter = "ida9rewriter.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
libcst = "^1.4.0"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
